tests/snapshots/parser_05_4_pratt_evaluation_2__precedence_power_vs_multiplication.snap
---
source: tests/parser_05-4_pratt_evaluation-2.rs
expression: ast
---
Binary:
  left:
    Binary:
      left:
        Var: a
      op: Power
      right:
        Var: b
  op: Mul
  right:
    Var: c
