tests/snapshots/parser_05_4_pratt_evaluation_2__precedence_unary_vs_power.snap
---
source: tests/parser_05-4_pratt_evaluation-2.rs
expression: "parse_to_ast(\"-a ^ b\")"
---
Binary:
  left:
    Unary:
      op: Neg
      expr:
        Var: a
  op: Power
  right:
    Var: b
